MODON MRE BPDEV/force-app/main/default/objects/Reminder_Config__mdt/Reminder_Config__mdt.object-meta.xml
<CustomObject>
    <label>Reminder Config</label>
    <pluralLabel>Reminder Configs</pluralLabel>
</CustomObject>