MODON MRE BPDEV/force-app/main/default/objects/Reminder_Config__mdt/fields/Message_Config_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Message_Config_Developer_Name__c</fullName>
    <label>Message Config Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>