MODON MRE BPDEV/force-app/main/default/objects/Reminder_Config__mdt/fields/Offset_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Offset_Minutes__c</fullName>
    <label>Offset Minutes</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>