MODON MRE BPDEV/force-app/main/default/objects/Reminder_Config__mdt/fields/Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_Object__c</fullName>
    <label>Related Object</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>