MODON MRE BPDEV/force-app/main/default/objects/Reminder_Config__mdt/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>